<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/action_bar_layout"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/registration_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_layout"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_name"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/button_rectangle_pink"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"

        />

    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerInParent="true"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:id="@+id/connect_layout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/tv_Register"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.3"
            android:text="@string/line1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/or_connect_with" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.3"
            android:text="@string/line2" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_with_facebook"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/connect_layout"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_facebook" />

</RelativeLayout>